# disk_analyzer

./: Cargo.toml  README.md
src/: app.rs  filetree.rs  main.rs
src/scan/: mod.rs  scanner.rs  std_fs.rs
